# passivedns

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  INSTALL.hiredis  Makefile.am  NEWS  README  README.win.txt  bootstrap  configure.ac  passivedns-1.1.4.tar.bz2  passivedns.1.in  passivedns.sln  pdns.patch  version.m4
doc/: AUTHORS  ChangeLog  How-it-works.txt  INSTALL  ISSUES  README  README.upgrading  ROADMAP  TODO
etc/: default-debian
etc/default/: passivedns-debian
etc/init.d/: passivedns-redhat
etc/logrotate.d/: passivedns
etc/sysconfig/: passivedns-redhat
include/: sysdep.h
init.d/: passivedns-debian
ldns-lib/: Changelog.txt  README.txt  buffer.c  dname.c  dnssec.c  dnssec_sign.c  dnssec_verify.c  dnssec_zone.c  error.c  higher.c  host2str.c  host2wire.c  keys.c  ldns-lib.vcproj  libdns.doxygen  net.c  packet.c  parse.c  rbtree.c  rdata.c  resolver.c  rr.c  rr_functions.c  sha1.c  sha2.c  str2host.c  tsig.c  util.c  wire2host.c  zone.c
ldns-lib/compat/: b32_ntop.c  b32_pton.c  b64_ntop.c  b64_pton.c  fake-rfc2553.c  fake-rfc2553.h  getopt.c  inet_aton.c  inet_ntop.c  malloc.c  memmove.c  realloc.c  snprintf.c  timegm.c
ldns-lib/doc/: design.dox
ldns-lib/ldns/: buffer.h  common.h  config.h  config.h.in  dname.h  dnssec.h  dnssec_sign.h  dnssec_verify.h  dnssec_zone.h  error.h  higher.h  host2str.h  host2wire.h  keys.h  ldns.h  net.h.in  packet.h  parse.h  rbtree.h  rdata.h  resolver.h  rr.h  rr_functions.h  sha1.h  str2host.h  tsig.h  update.h  util.h  util.h.in  wire2host.h  zone.h
src/: Makefile  Makefile.am  defrag.c  defrag.h  dns.c  dns.h  dump_dns.c  dump_dns.h  getopt.c  inet_ntop.c  inet_ntop.h  passivedns.c  passivedns.h  passivedns.vcproj  redis-conn.c  redis-conn.h  wingetopt.h
tools/: README.skip_white_black-list.txt  pdns2db.pl  search-pdns.pl
www/: index.php
www2/: ChartNew.js  blacklist.txt  check_malware_domains.php  dig.php  dns.css  function.php  get_ipaddress.php  index.php  parse_tlds.php  pdns.sql  plot.php  plot2.php  plot_data.php  stats.php  update_asn.sh  update_ip.php
